2011-07-24  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: remove an extra leading blank line
	* tests/override-conditional-1.test: Remove extra blank line
	placed before the shebang line.

2011-07-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix typos, grammaros and other blunders in comments
	All affected files changed.

2011-07-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: new subroutine 'seq_', simulating GNU seq(1)
	* tests/defs (seq_): New subroutine.
	* tests/instmany.test: Use it.
	* tests/instmany-mans.test: Likewise.
	* tests/instmany-python.test: Likewise.
	* tests/self-check-seq.test: New self test.
	* tests/Makefile.am (TESTS): Update.

2011-07-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: remove duplication about testing of config.* aux files
	* tests/add-missing.test: Also check that the `AC_CANONICAL_SYSTEM'
	autoconf macro causes the `config.sub' and `config.guess' scripts
	to be installed by `automake --add-missing'.  Since we are at it,
	fix minor buglets and cosmetic issues in the `check_' function.
	* tests/hosts.test: Removed, completely subsumed by the previous
	test now.
	* tests/Makefile.am (TESTS): Update.

2011-07-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: more uses of the 'unindent' subroutine
	* tests/backcompat.test: Prefer `unindent' over plain `cat' for
	here documents created from within a loop of if/else body.
	* tests/backcompat2.test: Likewise.
	* tests/backcompat4.test: Likewise.
	* tests/init.test: Likewise.
	* tests/instmany.test: Likewise.
	* tests/instmany-mans.test: Likewise.
	* tests/instmany-python.test: Likewise.
	* tests/missing5.test: Likewise.
	* tests/parallel-am2.test : Likewise.
	* tests/parallel-am3.test : Likewise.
	* tests/pr307.test: Likewise.
	* tests/depend4.test: Likewise.  Since we are at it, normalize
	other code formatting.
	* tests/instfail-java.test: Prefer `echo' over `cat' + here-doc
	inside a for loop.
