@@ -66,14 +66,12 @@ $stat config.status Makefile configure.in
 # Makefile & config.status.  To reproduce this race consistently, we
 # need the following hackish wrappers.
 
-save_AUTOCONF=$AUTOCONF
-
 cat > aclocal-wrap <<END
 #!/bin/sh
 set -ex
 # aclocal shouldn't use our autoconf wrapper when extracting
 # the races from configure.in.
-AUTOCONF='$save_AUTOCONF'; export AUTOCONF
+AUTOCONF='$AUTOCONF'; export AUTOCONF
 $ACLOCAL "\$@"
 touch -r config.status aclocal.m4
 $stat aclocal.m4
@@ -84,7 +82,7 @@ cat > automake-wrap <<END
 set -ex
 # automake shouldn't use our autoconf wrapper when extracting
 # the races from configure.in.
-AUTOCONF='$save_AUTOCONF'; export AUTOCONF
+AUTOCONF='$AUTOCONF'; export AUTOCONF
 $AUTOMAKE "\$@"
 touch -r config.status Makefile.in
 $stat Makefile.in
