@@ -1,5 +1,11 @@
 2011-07-24  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: a small simplification in 'pr8365-remake-timing.test'
+	* tests/pr8365-remake-timing.test: Avoid redundant definition
+	and use of `$save_AUTOCONF' variable.
+
+2011-07-24  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests: remove an extra leading blank line
 	* tests/override-conditional-1.test: Remove extra blank line
 	placed before the shebang line.
